--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ license = "MIT OR Apache-2.0"
 cargo_toml = "0.14.0"
 clap = { version = "4.1.1", features = ["derive"] }
 execute = "0.2.11"
+indicatif = "0.17.3"
 serde = { version = "1.0.152", features = ["derive"] }
 swift-bridge-build = "0.1.46"
