Remove targets without sufficient toolchain support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "MIT OR Apache-2.0"
 cargo_toml = "0.14.0"
 clap = { version = "4.1.1", features = ["derive"] }
 convert_case = "0.6.0"
-dialoguer = "0.10.3"
+dialoguer = { version = "0.10.3", default-features = false }
 execute = "0.2.11"
 gag = "1.0.0"
 indicatif = "0.17.3"
