--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cargo-swift"
-description = "WIP"
-version = "0.0.0"
+description = "A cargo plugin to easily build Swift packages from Rust code"
+version = "0.1.0"
 edition = "2021"
 authors = ["Antonius Naumann <git@antonius.dev>"]
 license = "MIT OR Apache-2.0"
