--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/antoniusnaumann/cargo-swift"
 keywords = ["macos", "ios", "mobiledev", "spm", "swiftpackage"]
 categories = ["command-line-utilities", "development-tools", "development-tools::build-utils", "development-tools::cargo-plugins", "development-tools::ffi"]
-exclude = ["/readme", "/.github"]
+exclude = ["/readme", "/.github", "/testing"]
 
 [dependencies]
 cargo_toml = "0.14.0"
