--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ categories = ["command-line-utilities", "development-tools", "development-tools:
 exclude = ["/readme", "/.github", "/testing"]
 
 [dependencies]
+anyhow = "1.0.69"
+camino = "1.1.3"
 cargo_toml = "0.15.2"
 clap = { version = "4.1.6", features = ["derive"] }
 convert_case = "0.6.0"
@@ -20,5 +22,6 @@ indicatif = "0.17.3"
 serde = { version = "1.0.152", features = ["derive"] }
 
 swift-bridge-build = "0.1.50"
+uniffi_bindgen = "0.23.0"
 # Local version for checking integration with local swift-bridge-build changes
 #  swift-bridge-build = { path = "../swift-bridge/crates/swift-bridge-build" }
