--- a/template/template.toml
+++ b/template/template.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-crate-type = ["staticlib"]
-
+crate-type = ["cdylib"]
+name = "mylib"
 
 [dependencies]
-swift-bridge = "0.1"
+uniffi = "0.23"
