--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ categories = ["command-line-utilities", "development-tools", "development-tools:
 exclude = ["/readme", "/.github", "/testing"]
 
 [dependencies]
-anyhow = "1.0.69"
 camino = "1.1.3"
 cargo_toml = "0.15.2"
 clap = { version = "4.1.6", features = ["derive"] }
@@ -25,4 +24,7 @@ indicatif = "0.17.3"
 
 # FFI Bindings
 uniffi_bindgen = "0.23.0"
+
+# Error Handling
+anyhow = "1.0.69"
 thiserror = "1.0.39"
