--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ categories = ["command-line-utilities", "development-tools", "development-tools:
 exclude = ["/readme", "/.github", "/testing"]
 
 [dependencies]
-camino = "1.1.3"
+camino = "1.1.4"
 cargo_toml = "0.15.2"
-clap = { version = "4.1.6", features = ["derive"] }
+clap = { version = "4.1.11", features = ["derive"] }
 convert_case = "0.6.0"
-serde = { version = "1.0.152", features = ["derive"] }
+serde = { version = "1.0.158", features = ["derive"] }
+regex = "1.7.1"
 
 # Terminal UI
 dialoguer = { version = "0.10.3", default-features = false }
@@ -26,5 +27,5 @@ indicatif = "0.17.3"
 uniffi_bindgen = "0.23.0"
 
 # Error Handling
-anyhow = "1.0.69"
-thiserror = "1.0.39"
+anyhow = "1.0.70"
+thiserror = "1.0.40"
