Only build examples on macOS latest

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -13,10 +13,9 @@ jobs:
   tests:
     strategy:
       matrix:
-        os: [macos-latest, macos-11, macos-12]
         path: [./swift-examples/hello-world/greeter]
         target: ['platform=macOS,arch=arm64', 'platform=macOS,arch=x86_64', 'platform=iOS', 'platform=iOS Simulator']
-    runs-on: ${{ matrix.os }}
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
     - name: Install
