--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         path: [./swift-examples/hello-world/greeter]
-        target: ['platform=macOS,arch=arm64', 'platform=macOS,arch=x86_64', 'platform=iOS', 'platform=iOS Simulator']
+        target: ['platform=macOS,arch=x86_64', 'platform=iOS', 'platform=iOS Simulator']
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
