--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -14,7 +14,11 @@ jobs:
     strategy:
       matrix:
         path: [./swift-examples/hello-world/greeter]
-        target: ['platform=macOS,arch=x86_64', 'platform=iOS Simulator,os=latest']
+        target: [
+            'platform=macOS,arch=x86_64', 
+            'generic/platform=iOS',
+            # 'platform=iOS Simulator,os=latest'
+          ]
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
