--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cargo-swift"
 description = "A cargo plugin to easily build Swift packages from Rust code for use in iOS and macOS applications"
-version = "0.5.0-alpha01"
+version = "0.5.0-alpha02"
 edition = "2021"
 authors = ["Antonius Naumann <git@antonius.dev>"]
 license = "MIT OR Apache-2.0"
@@ -29,3 +29,5 @@ uniffi_bindgen = "0.24.3"
 # Error Handling
 anyhow = "1.0.75"
 thiserror = "1.0.49"
+nonempty = "0.8.1"
+cargo_metadata = "0.18.0"
