--- a/template/template.Cargo.toml
+++ b/template/template.Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-crate-type = ["<LIB_TYPE>"]
+crate-type = ["<LIB_TYPE>", "lib"]
 name = "<NAMESPACE>"
 
 [dependencies]
