--- a/swift-examples/hello-world/greeter/Cargo.toml
+++ b/swift-examples/hello-world/greeter/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-crate-type = ["cdylib", "staticlib"]
+crate-type = ["cdylib", "staticlib", "lib"]
 name = "greeter"
 
 [dependencies]
