--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,10 @@ exclude = ["/readme", "/.github", "/testing", "/swift-examples", "*-DRAFT.md"]
 [dependencies]
 camino = "1.1.6"
 cargo_toml = "0.16.3"
+cargo_metadata = "0.18.0"
 clap = { version = "4.4.6", features = ["derive"] }
 convert_case = "0.6.0"
+nonempty = "0.8.1"
 serde = { version = "1.0.188", features = ["derive"] }
 regex = "1.9.6"
 
@@ -24,10 +26,8 @@ execute = "0.2.12"
 indicatif = "0.17.7"
 
 # FFI Bindings
-uniffi_bindgen = "0.24.3"
+uniffi_bindgen = { version = "0.24.3", git = "https://github.com/mozilla/uniffi-rs.git" }
 
 # Error Handling
 anyhow = "1.0.75"
 thiserror = "1.0.49"
-nonempty = "0.8.1"
-cargo_metadata = "0.18.0"
