--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ serde = { version = "1.0.188", features = ["derive"] }
 regex = "1.9.6"
 
 # Terminal UI
+console = "0.15.7"
 dialoguer = { version = "0.11.0", default-features = false }
 execute = "0.2.12"
 indicatif = "0.17.7"
