--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ nonempty = "0.8.1"
 serde = { version = "1.0.188", features = ["derive"] }
 regex = "1.9.6"
 
+# Templating
+askama = "0.12.1"
+
 # Terminal UI
 console = "0.15.7"
 dialoguer = { version = "0.11.0", default-features = false }
