Reformat Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,13 @@ authors = ["Antonius Naumann <git@antonius.dev>"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/antoniusnaumann/cargo-swift"
 keywords = ["macos", "ios", "uniffi", "spm", "swift"]
-categories = ["command-line-utilities", "development-tools", "development-tools::build-utils", "development-tools::cargo-plugins", "development-tools::ffi"]
+categories = [
+  "command-line-utilities",
+  "development-tools",
+  "development-tools::build-utils",
+  "development-tools::cargo-plugins",
+  "development-tools::ffi",
+]
 exclude = ["/readme", "/.github", "/testing", "/swift-examples", "*-DRAFT.md"]
 
 [dependencies]
