--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,5 +42,6 @@ uniffi_bindgen = { version = "0.24.3" }
 # Error Handling
 anyhow = "1.0.75"
 thiserror = "1.0.49"
+lazy_static = "1.4.0"
 
 [features]
