--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ exclude = ["/readme", "/.github", "/testing", "/swift-examples", "*-DRAFT.md"]
 
 [dependencies]
 camino = "1.1.6"
-cargo_toml = "0.16.3"
 cargo_metadata = "0.18.0"
 clap = { version = "4.4.6", features = ["derive"] }
 convert_case = "0.6.0"
@@ -43,5 +42,6 @@ uniffi_bindgen = { version = "0.24.3" }
 anyhow = "1.0.75"
 thiserror = "1.0.49"
 lazy_static = "1.4.0"
+itertools = "0.11.0"
 
 [features]
