Pin Uniffi bindgen to 0.28.1 and update bindings generator call

--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -17,6 +17,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Cargo Outdated
-        run: cargo outdated --exit-code 1
+        run: cargo outdated -i cargo_metadata --exit-code 1
       - name: Cargo Audit
         run: cargo audit -D warnings
