--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ exclude = ["/readme", "/.github", "/testing", "/swift-examples", "*-DRAFT.md"]
 
 [dependencies]
 camino = "1.1.7"
-cargo_metadata = "0.18.1"
+cargo_metadata = "0.15.4"
 clap = { version = "4.5.11", features = ["derive"] }
 convert_case = "0.6.0"
 glob = "0.3.1"
@@ -35,7 +35,7 @@ execute = "0.2.13"
 indicatif = "0.17.8"
 
 # FFI Bindings
-uniffi_bindgen = { version = "0.28.0" }
+uniffi_bindgen = { version = "=0.28.1" }
 
 # Error Handling
 anyhow = "1.0.86"
