--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -14,5 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - uses: olix0r/cargo-action-fmt/setup@v2
     - name: Clippy
-      run: cargo clippy -vv -- -D warnings
+      run: cargo clippy -q -- -D warnings --message-format=json | cargo-action-fmt
