--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,5 +19,5 @@ jobs:
     - name: Publish to crates.io
       env: 
         CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_LOGIN }}
-      run: cargo publish
+      run: cargo publish --allow-dirty
     
