--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Cargo Outdated
-        run: cargo outdated -i cargo_metadata --exit-code 1
+        run: cargo install cargo-outdated && cargo outdated -i cargo_metadata --exit-code 1
       - name: Cargo Audit
-        run: cargo audit -D warnings
+        run: cargo install cargo-audit && cargo audit -D warnings
